--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,10 @@
 *{
     font-family: 'Open Sans', sans-serif;
 }
+header{
+    margin: auto;
+    width: 80%;
+}
 .navh3{
     font-size: 45px;
 }
@@ -32,4 +36,86 @@ a{
     border: 2px solid black;
     border-radius: 5px;
     padding: 18px 18px 25px 25px;
+}
+.CallIcon{
+    padding: 3px;
+    background-color: lightblue;
+
+}
+.Download{
+    color:white;
+    background-color: #FD6E0A;
+    padding: 3px;
+    margin: 10px;
+    
+}
+.section1{
+    display: flex;
+    /* border: 2px solid red; */
+    margin: auto;
+    width: 80%;
+}
+.section1>div{
+    width: 40%;
+    
+    
+}
+/* .main1{
+    margin-left: 5%;
+} */
+.main2{
+    width: 100%;
+    background-image: url(../portfolio-resources/images/header_bg.png);
+    margin-left: auto;
+    
+}
+.main2>img{
+    padding-right: 20%;
+    width: 100%;
+    width: 100%;
+}
+.section2{
+    margin: auto;
+    width: 80%;
+    margin-top: 70px;
+    
+    
+    
+}
+.section2>h5{
+    text-align: center;
+}
+.section2 p{
+    text-align: justify;
+    padding: 10px;
+}
+
+/* section3 start style  */
+
+.section3{
+    display: flex;
+    padding: 10px;
+    margin: auto;
+    justify-content: center;
+    
+}
+
+.section3 div{
+    padding: 10px;
+    margin: 5px;
+    text-align: center;}
+    
+div>label{
+    display: block;
+}
+.section4{
+    width: 80%;
+    margin: auto;
+    display: flex;
+}
+.section4 .contactBio{
+    width: 60%;
+}
+.inputsdata input{
+    width:80%;
 }
